SQL integration, big UI overhaul. Still need to improve the refreshMenu() method.